force-app/main/default/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c/Apttus_Config2__DataValidationEnrichmentRuleset__c.object-meta.xml
<CustomObject>
    <description>Represents a set of data validation and enrichment rules to validate and default values into objects</description>
    <label>Data Validation/Enrichment Ruleset</label>
    <nameField>
        <label>Ruleset Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Data Validation/Enrichment Rulesets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>