force-app/main/default/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c/fields/Apttus_Config2__SourceAndTargetMatchCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceAndTargetMatchCriteria__c</fullName>
    <description>Criteria that will be used to match source and target data</description>
    <inlineHelpText>Criteria that will be used to match source and target data</inlineHelpText>
    <label>Source And Target Match Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>