force-app/main/default/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c/fields/Apttus_Config2__SourceDataObject__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__SourceDataObject__c</fullName>
    <description>Data object using which target data will be validated or enriched</description>
    <inlineHelpText>Data object using which target data will be validated or enriched</inlineHelpText>
    <label>Source Data Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apttus_Proposal__Proposal__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Proposal__Proposal_Line_Item__c</fullName>
            </value>
            <value>
                <fullName>Apttus__APTS_Agreement__c</fullName>
            </value>
            <value>
                <fullName>Apttus__AgreementLineItem__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__Order__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__OrderLineItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>