force-app/main/default/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c/fields/Apttus_Config2__TargetObjectFilterCriteria__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetObjectFilterCriteria__c</fullName>
    <description>Filter criteria to get to the list of the data objects that needs to be validated / enriched</description>
    <inlineHelpText>Filter criteria to get to the list of the data objects that needs to be validated / enriched</inlineHelpText>
    <label>Target Object Filter Criteria</label>
    <length>2048</length>
    <type>LongTextArea</type>
</CustomField>