force-app/main/default/objects/Apttus_Config2__DataValidationEnrichmentRuleset__c/fields/Apttus_Config2__TargetObjectToValidate__c.field-meta.xml
<CustomField>
    <fullName>Apttus_Config2__TargetObjectToValidate__c</fullName>
    <description>Data object that needs to be validated and enriched</description>
    <inlineHelpText>Data object that needs to be validated and enriched</inlineHelpText>
    <label>Target Object To Validate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apttus_Config2__CustomerPurchaseOrder__c</fullName>
            </value>
            <value>
                <fullName>Apttus_Config2__CustomerPOItem__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>